lock-mechanism try 2